--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     testImplementation 'com.codeborne:selenide:6.17.2'
+    testImplementation 'io.cucumber:cucumber-java:7.1.0'
+    testImplementation 'io.cucumber:cucumber-junit:7.1.0'
     testImplementation 'org.slf4j:slf4j-simple:1.7.32'
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    testImplementation 'io.rest-assured:rest-assured:5.3.1'
-    testImplementation 'com.google.code.gson:gson:2.10.1'
+
 }
 
 test {
