--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,10 @@ dependencies {
     testImplementation 'org.slf4j:slf4j-simple:1.7.32'
     testCompileOnly 'org.projectlombok:lombok:1.18.28'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
+    testImplementation 'io.rest-assured:rest-assured:5.3.1'
+    testImplementation 'io.rest-assured:json-schema-validator:4.3.1'
 }
+
 
 test {
     useJUnitPlatform()
