Fixed project encoding

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ plugins {
 group 'ru.netology'
 version = '1.0-SNAPSHOT'
 
+sourceCompatibility = 11
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
+
 repositories {
     mavenCentral()
 }
@@ -16,8 +20,6 @@ dependencies {
     testImplementation 'org.slf4j:slf4j-simple:1.7.32'
     testCompileOnly 'org.projectlombok:lombok:1.18.28'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
-    testImplementation 'io.rest-assured:rest-assured:5.3.1'
-    testImplementation 'io.rest-assured:json-schema-validator:4.3.1'
 }
 
 
